--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-react-hw-07-hooks-phonebook",
+  "name": "goit-react-hw-08-hooks-phonebook",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.25.0",
     "formik": "^2.2.9",
     "mini-css-extract-plugin": "^2.5.2",
     "modern-normalize": "^1.1.0",
